# bridgeAI-regression-model-training

./: .gitignore  CODEOWNERS  Dockerfile  README.md  config.yaml  docker-compose.yaml  main.py  pyproject.toml  renovate.json  train.py  utils.py
.github/workflows/: release.yml  test.yml
my_project/: Dockerfile
src/: evaluate.py  fetch_data.py  main.py  mlflow_utils.py  model.py  preprocess.py  servable_model.py  train.py  utils.py
tests/: docker-compose-integration-test-airflow.yaml  docker-compose-integration-test-mlflow.yaml  mock_main.py  test_evaluate.py  test_fetch.py  test_integration_main_airflow.py  test_integration_main_mlflow.py  test_integration_main_to_mlflow.py  test_integration_mlflow.py  test_main.py  test_model.py  test_preprocessing.py
