[tool.poetry]
name = "bridgeai-regression-model-training"
version = "0.1.1"
description = "A basic containerised regression model training setup"
authors = ["DC AI Team <opensource@digicatapult.org.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
python-json-logger = "^2.0.7"
torch = "^2.3.1"
scikit-learn = "^1.5.0"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
mlflow = "^2.14.2"
setuptools = "^70.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
